Poprawki aby działały role(błąd jeszcze jest taki myśleniowy, teraz tak naprawde to co nazywam rolą to jest uprawnienie). Endpointy działają tak to jest git. Pamietaj ważna kolejnosc requestMatchers